force-app/main/default/objects/Coaching_Nudge__c/Coaching_Nudge__c.object-meta.xml
<CustomObject>
    <description>AI-driven or manual coaching nudges delivered to forecast participants.</description>
    <label>Coaching Nudge</label>
    <nameField><label>Coaching Nudge Name</label><type>AutoNumber</type><displayFormat>CN-{00000}</displayFormat></nameField>
    <pluralLabel>Coaching Nudges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>