force-app/main/default/objects/Coaching_Nudge__c/fields/Actioned__c.field-meta.xml
<CustomField>
    <fullName>Actioned__c</fullName>
    <label>Actioned</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>