force-app/main/default/objects/Coaching_Nudge__c/fields/AI_Generated__c.field-meta.xml
<CustomField>
    <fullName>AI_Generated__c</fullName>
    <label>AI Generated</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>