force-app/main/default/objects/Coaching_Nudge__c/fields/Behavioral_Flag__c.field-meta.xml
<CustomField>
    <fullName>Behavioral_Flag__c</fullName>
    <label>Behavioral Flag</label>
    <type>Lookup</type>
    <referenceTo>Behavioral_Flag__c</referenceTo>
    <relationshipLabel>Coaching Nudges</relationshipLabel>
    <relationshipName>Coaching_Nudges_Flag</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>