force-app/main/default/objects/Coaching_Nudge__c/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <label>Body</label>
    <type>LongTextArea</type>
    <length>5000</length>
</CustomField>