force-app/main/default/objects/Coaching_Nudge__c/fields/Delivered_On__c.field-meta.xml
<CustomField>
    <fullName>Delivered_On__c</fullName>
    <label>Delivered On</label>
    <type>DateTime</type>
</CustomField>