force-app/main/default/objects/Coaching_Nudge__c/fields/Delivery_Channel__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Channel__c</fullName>
    <label>Delivery Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>In_App</fullName><default>false</default><label>In_App</label></value>
            <value><fullName>Slack</fullName><default>false</default><label>Slack</label></value>
            <value><fullName>Teams</fullName><default>false</default><label>Teams</label></value>
            <value><fullName>Email</fullName><default>false</default><label>Email</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>