force-app/main/default/objects/Coaching_Nudge__c/fields/Forecast_Period__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Period__c</fullName>
    <label>Forecast Period</label>
    <type>Lookup</type>
    <referenceTo>Forecast_Period__c</referenceTo>
    <relationshipLabel>Coaching Nudges</relationshipLabel>
    <relationshipName>Coaching_Nudges_Period</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>