force-app/main/default/objects/Coaching_Nudge__c/fields/Nudge_Type__c.field-meta.xml
<CustomField>
    <fullName>Nudge_Type__c</fullName>
    <label>Nudge Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Deal_Risk</fullName><default>false</default><label>Deal_Risk</label></value>
            <value><fullName>Stale_Deal</fullName><default>false</default><label>Stale_Deal</label></value>
            <value><fullName>Accuracy_Alert</fullName><default>false</default><label>Accuracy_Alert</label></value>
            <value><fullName>Threshold_Opportunity</fullName><default>false</default><label>Threshold_Opportunity</label></value>
            <value><fullName>Proactive_Coaching</fullName><default>false</default><label>Proactive_Coaching</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>