force-app/main/default/objects/Coaching_Nudge__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <type>Lookup</type>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Coaching Nudges</relationshipLabel>
    <relationshipName>Coaching_Nudges</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>