force-app/main/default/objects/Coaching_Nudge__c/fields/Read_On__c.field-meta.xml
<CustomField>
    <fullName>Read_On__c</fullName>
    <label>Read On</label>
    <type>DateTime</type>
</CustomField>