force-app/main/default/objects/Coaching_Nudge__c/fields/Recipient__c.field-meta.xml
<CustomField>
    <fullName>Recipient__c</fullName>
    <label>Recipient</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Coaching Nudges Received</relationshipLabel>
    <relationshipName>Coaching_Nudges_Received</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>