force-app/main/default/objects/Coaching_Nudge__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Pending</fullName><default>false</default><label>Pending</label></value>
            <value><fullName>Delivered</fullName><default>false</default><label>Delivered</label></value>
            <value><fullName>Read</fullName><default>false</default><label>Read</label></value>
            <value><fullName>Actioned</fullName><default>false</default><label>Actioned</label></value>
            <value><fullName>Dismissed</fullName><default>false</default><label>Dismissed</label></value>
            <value><fullName>Expired</fullName><default>false</default><label>Expired</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>